fix: overflow on desktop if formatting bar is too long

--- a/static/scss/composer.scss
+++ b/static/scss/composer.scss
@@ -369,12 +369,9 @@
 	}
 }
 
-@include media-breakpoint-up(md) {
-	// without this formatting elements that are dropdowns are not visible on desktop.
-	// on mobile dropdowns use bottom-sheet and overflow is auto
-	.formatting-group {
-		overflow: visible!important;
-	}
+// without this formatting elements that are dropdowns are not visible
+.formatting-group:has([aria-expanded="true"]) {
+	overflow:visible!important;
 }
 
 @import './zen-mode';
